[tool.poetry]
name = "seastate"
version = "0.1.2"
description = "Collect ocean measurement data based on location and timeframe. Integrates NDBC and TidesAndCurrents datasources."
authors = ["Ivo <ivorivetta@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ivorivetta/seastate"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12,<4"
defusedxml = "^0.7.1"
numpy = "^1.23.1"
requests = "^2.28.1"
urllib3 = "^1.26.10"
requests-cache = "^1.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"
Faker = "^19.6.2"
pytest = "^7.4.2"

[tool.poetry.group.dev.dependencies]
line-profiler = "^4.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ivorivetta/seastate/issues"