[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seastate"
version = "0.2.0"
authors = [{ name = "Ivo Rivetta", email = "ivo@ivorivetta.com" }]
description = "Collect ocean measurements for location and timeframe. Integrates NDBC and TidesAndCurrents datasources."
readme = "README.md"
requires-python = ">=3.8.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "ocean",
    "tides",
    "currents",
    "ndbc",
    "weather",
    "forecast",
    "marine",
    "data",
    "api",
]

[project.urls]
Homepage = "https://github.com/ivorivetta/seastate"
Issues = "https://github.com/ivorivetta/seastate/issues"
